Fix margin on mobile

--- a/src/components/_card.scss
+++ b/src/components/_card.scss
@@ -4,12 +4,15 @@
   @include flex-direction(column);
   @include justify-content(space-between);
   @include align-items(center);
-  height: 220px;
+  height: 190px;
   width: 230px;
   margin-bottom: 50px;
   &:hover #{$_}__icon {
       transform: scale(1.3);
     }
+  &:last-of-type {
+    margin-bottom: 0;
+  }
   &__text {
     @include flexbox;
     @include flex-direction(column);
@@ -31,3 +34,6 @@
     transition: transform 150ms linear;
   }
 }
+
+
+// original:   .card height: 220px;
