--- a/src/objects/card-wrapper/_card-wrapper.scss
+++ b/src/objects/card-wrapper/_card-wrapper.scss
@@ -3,4 +3,5 @@
   @include flex-direction(column);
   @include justify-content(space-between);
   @include align-items(center);
+  margin-top: 40px;
 }
