--- a/static/main.css
+++ b/static/main.css
@@ -460,7 +460,8 @@ a {
   -webkit-align-items: center;
   -moz-align-items: center;
   -ms-align-items: center;
-  align-items: center; }
+  align-items: center;
+  margin-top: 40px; }
 
 .banner {
   text-align: center;
@@ -537,6 +538,9 @@ a {
 
 .intro {
   text-align: center; }
+  .intro__text {
+    width: 100%;
+    max-width: 570px; }
   .intro__title {
     font-size: 28px;
     font-weight: 700;
@@ -544,11 +548,12 @@ a {
   .intro__subtitle {
     font-size: 18px;
     margin-bottom: 40px; }
+  .intro__graphic {
+    order: -1; }
   .intro__pic {
-    width: 85%;
     max-width: 470px;
+    width: 85%;
     margin-bottom: 60px;
-    order: -1;
     box-shadow: -1px 1px 0 #64656e, -2px 2px 0 #64656e, -3px 3px 0 #64656e, -4px 4px 0 #64656e, -5px 5px 0 #64656e, -6px 6px 0 #64656e, -7px 7px 0 #64656e, -8px 8px 0 #64656e, -9px 9px 0 #64656e, -10px 10px 0 #64656e, -11px 11px 0 #64656e, -12px 12px 0 #64656e, -13px 13px 0 #64656e, -14px 14px 0 #64656e, -15px 15px 0 #64656e, -16px 16px 0 #64656e, -17px 17px 0 #64656e, -18px 18px 0 #64656e, -19px 19px 0 #64656e, -20px 20px 0 #64656e, -21px 21px 0 #64656e;
     border-radius: 5px; }
 
@@ -599,11 +604,13 @@ a {
   -moz-align-items: center;
   -ms-align-items: center;
   align-items: center;
-  height: 220px;
+  height: 190px;
   width: 230px;
   margin-bottom: 50px; }
   .card:hover .card__icon {
     transform: scale(1.3); }
+  .card:last-of-type {
+    margin-bottom: 0; }
   .card__text {
     display: -webkit-box;
     display: -moz-box;
@@ -845,9 +852,10 @@ a {
   .intro__subtitle {
     font-size: 24px;
     margin-bottom: 60px; }
-  .intro__pic {
+  .intro__graphic {
     width: 100%;
-    order: 0;
+    order: 0; }
+  .intro__pic {
     margin-bottom: 0; } }
 
 /*# sourceMappingURL=main.css.map */
